// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`step 2 should query dirs 1`] = `
Object {
  "data": Object {
    "dirs": Array [
      Object {
        "name": "Father",
        "type": "Dir",
      },
      Object {
        "name": "Mother",
        "type": "Dir",
      },
    ],
  },
}
`;

exports[`step 2 should query files and dirs 1`] = `
Object {
  "data": Object {
    "dirs": Array [
      Object {
        "name": "Father",
        "type": "Dir",
      },
      Object {
        "name": "Mother",
        "type": "Dir",
      },
    ],
    "files": Array [
      Object {
        "name": "Bart_Simpson.png",
        "type": "File",
      },
      Object {
        "name": "Lisa_Simpson.png",
        "type": "File",
      },
      Object {
        "name": "Maggie_Simpson.png",
        "type": "File",
      },
    ],
  },
}
`;
